--- a/package.json
+++ b/package.json
@@ -1,46 +1,46 @@
 {
-  "name": "999-portfolio",
+  "name": "warna-travel-site",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
     "webpack": "webpack",
     "watch": "gulp watch"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/YudhaYuki/PP.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/YudhaYuki/PP/issues"
-  },
-  "homepage": "https://github.com/YudhaYuki/PP#readme",
   "dependencies": {
+    "bootstrap": "^4.0.0-beta",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "jquery-smooth-scroll": "^2.2.0",
-    "lazysizes": "^4.0.2",
+    "lazysizes": "^4.0.1",
     "normalize.css": "^8.0.0",
     "picturefill": "^3.0.2",
+    "popper.js": "^1.12.9",
+    "typed.js": "^2.0.6",
     "waypoints": "^4.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^8.2.0",
+    "autoprefixer": "^8.0.0",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.3",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.23.6",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-modernizr": "^2.0.1",
     "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-svg-sprite": "^1.4.0",
+    "gulp-rev": "^8.1.1",
+    "gulp-svg-sprite": "^1.3.7",
+    "gulp-svg2png": "^2.0.2",
+    "gulp-uglify": "^3.0.0",
+    "gulp-usemin": "^0.3.29",
     "gulp-watch": "^5.0.0",
     "postcss-hexrgba": "^1.0.0",
     "postcss-import": "^11.1.0",
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^3.0.0",
+    "postcss-prefixer-keyframes": "0.0.3",
     "postcss-simple-vars": "^4.1.0",
     "webpack": "^3.8.1"
   }
